tools/fleet/fixtures/packets/invalid/worker-worktree-command.case
source=valid-work.packet
mutation=add Worker-Command containing git worktree add
expected=invalid
